--- a/matrix.html
+++ b/matrix.html
@@ -310,7 +310,14 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <div class="d-flex flex-sm-row flex-column align-items-sm-center align-items-start justify-content-between">
+        <div
+          class="
+            d-flex
+            flex-sm-row flex-column
+            align-items-sm-center align-items-start
+            justify-content-between
+          "
+        >
           <h5 class="fs-28 fw-normal my-sm-2 mt-2 mb-0">
             Matrix
             <span class="fs-18"> (0 properties) </span>
@@ -584,7 +591,10 @@
                 aria-labelledby="pills-profile-tab"
               >
                 <div class="table-responsive additional-info-table">
-                  <table class="table table-striped table-borderless" style="table-layout: fixed;">
+                  <table
+                    class="table table-striped table-borderless"
+                    style="table-layout: fixed"
+                  >
                     <tbody>
                       <tr>
                         <td>
@@ -678,7 +688,9 @@
                           </p>
                           <p class="item-details">
                             Architect:
-                            <span class="item-details-value">Hassel & Forum</span>
+                            <span class="item-details-value"
+                              >Hassel & Forum</span
+                            >
                           </p>
                           <p class="item-details">
                             Interior Designer:
@@ -702,19 +714,25 @@
                           <p class="item-details">
                             Builder:
                             <span class="item-details-value">
-                              <a href="" class="text-info">http://www.hdp.com.au</a>
+                              <a href="" class="text-info"
+                                >http://www.hdp.com.au</a
+                              >
                             </span>
                           </p>
                           <p class="item-details">
                             Architect:
                             <span class="item-details-value text-info">
-                              <a href="" class="text-info">https://www.hasselstudio.com.au</a>
+                              <a href="" class="text-info"
+                                >https://www.hasselstudio.com.au</a
+                              >
                             </span>
                           </p>
                           <p class="item-details">
                             Interior Designer:
                             <span class="item-details-value text-info">
-                              <a href="" class="text-info">https://www.bergmanan.com.au</a>
+                              <a href="" class="text-info"
+                                >https://www.bergmanan.com.au</a
+                              >
                             </span>
                           </p>
                           <p class="item-details">
